--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 .backgroundHome{
-  background-image: url("/images/pexels-photo-226243.jpeg");
+  background-image: url("../images/pexels-photo-226243.jpeg");
   height: 300px;
   background-position: center;
   background-size: cover;
