--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,8 +20,12 @@ h1{
 
 p{
   font-size: 18px;
+  color: #4d4f52
 }
 
+label {
+  color: #4d4f52
+}
 
 .bild-container {
   width:auto;
@@ -34,3 +38,19 @@ p{
   border:2px solid #c0cad4;
   border-radius:5px;
 }
+
+.create-form {
+  border: 2px solid #c0cad4;
+  border-radius:5px;
+  background-color: rgba(90, 83, 83, 0.65);
+}
+
+/*.file-input {
+  background-color: #6a737b;
+  border-color: #6a737b;
+}
+
+.file-input:hover {
+  background-color: #54585a;
+  border-color: #54585a;
+}*/
